// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match with snapshot 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "blue",
      "borderRadius": 10,
      "justifyContent": "center",
      "margin": 10,
      "opacity": 1,
      "padding": 10,
    }
  }
  testID="button-touchable"
>
  <Text
    style={
      Object {
        "color": "white",
        "fontWeight": "bold",
      }
    }
    testID="button-title"
  />
</View>
`;

exports[`should render default given theme style 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "blue",
  "borderRadius": 10,
  "justifyContent": "center",
  "margin": 10,
  "opacity": 1,
  "padding": 10,
}
`;

exports[`should render given theme style 1`] = `
Object {
  "alignItems": "center",
  "borderColor": "blue",
  "borderRadius": 10,
  "borderWidth": 1,
  "justifyContent": "center",
  "margin": 10,
  "opacity": 1,
  "padding": 10,
}
`;
